--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-  <!-- <link
-      href="node_modules/froala-editor/css/froala_editor.pkgd.min.css"
-      rel="stylesheet"
-    />
-
-    <link
-      rel="stylesheet"
-      href="node_modules/froala-editor//css/froala_style.min.css"
-    /> -->
+  <link rel="stylesheet" href="node_modules/froala-editor/css/froala_editor.pkgd.min.css"/>
+  <link rel="stylesheet" href="node_modules/froala-editor/css/froala_style.min.css"/>
 </head>
 
 <body>
