--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="BuildSupply Material Manager is a real estate and construction focused inventory management solution. It helps you manage all your project procurement in one place and get real time tracking of your material inventory across multiple projects."
     />
-    <script src="assets/env.js"></script>
+    <script src="assets/config/env.js"></script>
     <link rel="icon" type="image/x-icon" href="assets/images/buildsupply.ico" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
